--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,10 @@ change-admin-credentials.sh
 # Deployment documentation
 DEPLOYMENT.md
 deployment-checklist.md
+setup-cloudfront.md
+quick-domain-setup.md
+cloudflare-setup.md
+PROJECT_URLS.md
 
 # AWS configuration files
 dns-records.json
